--- a/docs/style.css
+++ b/docs/style.css
@@ -81,7 +81,7 @@ header::after {
   z-index: -1;
   width: 100%;
   height: 100%;
-  background: url(../images/bg-pattern-intro.svg);
+  background: url(./images/bg-pattern-intro.svg);
   background-size: 150%;
   background-repeat: no-repeat;
   background-position-y: center;
@@ -98,7 +98,7 @@ header::after {
 }
 
 .logo {
-  background: url(../images/logo.svg);
+  background: url(./images/logo.svg);
   width: 101px;
   height: 40px;
 }
@@ -106,11 +106,11 @@ header::after {
 .burger-img {
   height: 18px;
   width: 32px;
-  background: url(../images/icon-hamburger.svg) center no-repeat;
+  background: url(./images/icon-hamburger.svg) center no-repeat;
 }
 
 .burger-img-close {
-  background: url(../images/icon-close.svg) center no-repeat;
+  background: url(./images/icon-close.svg) center no-repeat;
   height: 26px;
   width: 26px;
 }
@@ -143,7 +143,7 @@ header::after {
 
 .dropdown-name::after {
   content: "";
-  background: url(../images/icon-arrow-light.svg) center no-repeat;
+  background: url(./images/icon-arrow-light.svg) center no-repeat;
   right: -18px;
   top: 0;
   position: absolute;
@@ -323,7 +323,7 @@ h2 {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: url(../images/bg-pattern-circles.svg);
+  background: url(./images/bg-pattern-circles.svg);
   background-repeat: no-repeat;
   background-size: 60%;
   background-position-y: 74%;
@@ -569,7 +569,7 @@ footer {
   }
 
   .dropdown-name::after {
-    background: url(../images/icon-arrow-dark.svg) center no-repeat;
+    background: url(./images/icon-arrow-dark.svg) center no-repeat;
   }
 
   .sign-up {
